# rdma_framework

./: ALL_REVIEW_COMMENTS.md  CLAUDE.md  CMakeLists.txt  DESIGN.md  design_review.md  initial_plan.txt
cmake/: FindIBVerbs.cmake  FindRDMACM.cmake
examples/: client.cpp  echo_client.cpp  echo_server.cpp  kv_client.cpp  kv_client.h  kv_client_main.cpp  kv_protocol.h  kv_server.cpp  kv_server.h  kv_server_main.cpp  kv_store.h  server.cpp
include/rdma/: rdma.h
include/rdma/common/: logging.h  mpsc_queue.h  status.h  timing_wheel.h  types.h  wr_id.h
include/rdma/core/: completion_queue.h  device.h  doorbell_batcher.h  memory_region.h  protection_domain.h  queue_pair.h
include/rdma/memory/: buffer.h  buffer_pool.h  hugepage_allocator.h  memory_allocator.h
include/rdma/reactor/: numa.h  reactor.h
include/rdma/rpc/: completion_dispatcher.h  rpc_endpoint.h  rpc_slot.h
include/rdma/transport/: connection.h  connection_manager.h  flow_control.h  handshake_channel.h  tcp_handshake.h
src/common/: logging.cpp  status.cpp
src/core/: completion_queue.cpp  device.cpp  memory_region.cpp  protection_domain.cpp  queue_pair.cpp
src/memory/: buffer_pool.cpp  hugepage_allocator.cpp
src/reactor/: reactor.cpp
src/rpc/: completion_dispatcher.cpp  rpc_endpoint.cpp  rpc_slot.cpp
src/transport/: connection.cpp  connection_manager.cpp  flow_control.cpp  tcp_handshake.cpp
